deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: specter1591-api
  name: specter1591-api-svc
spec:
  ports:
  - port: 80
  selector:
    app: specter1591-api
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-redis
  name: api-redis
spec:
  selector:
    app: api-redis
  ports:
  - port: 6379
    targetPort: 6379
